--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <p>hello</p>
     <p>This is a new line</p>
-    <img src="" alt="empty img for testing">
+    <img src="img.png" alt="empty img for testing">
 </body>
 </html>
