--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p>This is a new line</p>
     <img src="img.png" alt="empty img for testing">
     <p>This to show how merging works</p>
+    <p>Testing how branchinng work on Github</p>
 </body>
 </html>
